web-infras/parser/tests/fixtures/esprima/es2017/for-statement/invalid-var-init-forin4/output.txt
[SyntaxError]: 'for-in' loop variable declaration may not have an initializer. (1,10)
1|for (var [p]=0 in q);
 |        ^
